Add header to capstone

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Movies App</title>
   </head>
   <body>
-    <h1>Hello webpack!</h1>
+    <header class="header flex main-space-around cross-center">
+      <div class="logo flex cross-center">
+        <img class="logo-image" src="" alt="logo">
+        <h1 class="logo-text">Movies App</h1>
+      </div>
+      <ul class="nav flex main-space-between">
+        <li><a href="#">Charachters</a></li>
+        <li><a href="#">Movies</a></li>
+      </ul>
+    </header>
   </body>
 </html>
