--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
   <link href="http://fonts.cdnfonts.com/css/new-motor" rel="stylesheet">
+  <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
 
@@ -26,7 +27,7 @@
   </header>
   <main class="container">
     <div>
-      <h2>MOVIES</h2>
+      <h2 class="title">MOVIES</h2>
       <ul class="movie-container flex main-center"></ul>
     </div>
   </main>
