Fix home page styles

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p class="flex main-center">Copyright &copy; 2022 Ramoun & Fernando</p>
   </footer>
 </body>
