--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </div>
     <ul class="nav flex main-space-between">
       <li><a href="#">Movies</a></li>
-      <li><a href="#">Characters</a></li>
+      <li><a href="#">About</a></li>
     </ul>
   </header>
   <main class="container">
