--- a/src/index.html
+++ b/src/index.html
@@ -25,20 +25,24 @@
       <li><a class="about-tab" href="#">About</a></li>
     </ul>
   </header>
-  <main class="container">
-    <div class="homepage">
-      <h2 class="title">MOVIES</h2>
-      <ul class="movie-container flex main-center"></ul>
-    </div>
+  <main>
+    <div class="container">
+      <div class="homepage">
+        <h2 class="title">MOVIES</h2>
+        <ul class="movie-container flex main-center"></ul>
+      </div>
 
-    <div class="about-section flex main-center cross-center">
-      <h2 class="title">ABOUT US</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam vero accusamus repellat reiciendis quos earum.
-        Dolore, aperiam. Maiores ea sequi molestias, minus aspernatur laudantium cupiditate odit itaque neque obcaecati
-        cumque?</p>
-    </div>
-
+      <div class="about-section flex main-center cross-center">
+        <h2 class="title">ABOUT US</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam vero accusamus repellat reiciendis quos
+          earum.
+          Dolore, aperiam. Maiores ea sequi molestias, minus aspernatur laudantium cupiditate odit itaque neque
+          obcaecati
+          cumque?</p>
+      </div>
   </main>
+  </div>
+
 
   <footer class="footer">
     <p class="flex main-center">Copyright &copy; 2022 Ramoun & Fernando</p>
