Add background to the homepage

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&display=swap" rel="stylesheet">
 
   <title>Movies App</title>
 </head>
